# coasync4cpp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  coasync4cpp.sln
cmake/: utils.cmake
coasync4cpp/: CMakeLists.txt  coasync4cpp.vcxproj  coasync4cpp.vcxproj.filters
coasync4cpp/src/: TaskDispatcher.cpp  TaskDispatcher.h  await.h  awaitables.h  bind2thread.cpp  bind2thread.h  coroutine.cpp  function_traits.h  playground.cpp  task.cpp  task.h  taskify.h  tst_at_compile_time.cpp  type_at_pos.h
coasync4qt/: CMakeLists.txt  coasync4qt.vcxproj
coasync4qt/src/: QFutureAwaitable.h  TaskDispatcher4QtThread.cpp  TaskDispatcher4QtThread.h  awaitables.h  awaitables4qt.h
testcoasync4cpp/: CMakeLists.txt  testCoasync4cpp.vcxproj  testCoasync4cpp.vcxproj.filters
testcoasync4cpp/src/: stdafx.cpp  stdafx.h  testCoasync4cpp.cpp  testTaskDispatcherBase.cpp  test_bind2thread.cpp  test_send2thread.cpp  test_task.cpp  test_task_thread.cpp  test_taskify.cpp
testcoasync4qt/: CMakeLists.txt  testCoasync4cpp_w_qt.vcxproj  testCoasync4cpp_w_qt.vcxproj.filters
testcoasync4qt/GeneratedFiles/Debug/: moc_TaskDispatcher4QtThread.cpp
testcoasync4qt/src/: TestWithQCoreApplication.h  main.cpp  stdafx.h  test_QtAwaitables.cpp  test_TaskDispatcher4QtThread.cpp  test_qt_thread.cpp
